--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.81.5",
+    "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
